# stylus-sdk-rs

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  Stylus.toml  rust-toolchain.toml
.cargo/: audit.toml
cargo-stylus/: Cargo.toml  README.md  build.rs
cargo-stylus/docs/: StylusDebugger.md
cargo-stylus/src/: common_args.rs  constants.rs  error.rs  ethereum.rs  main.rs
cargo-stylus/src/commands/: activate.rs  build.rs  cgen.rs  check.rs  codehash_keepalive.rs  constructor.rs  debug_hook.rs  deploy.rs  export_abi.rs  get_initcode.rs  init.rs  mod.rs  new.rs  replay.rs  simulate.rs  trace.rs  usertrace.rs  verify.rs
cargo-stylus/src/utils/: hostio.rs  mod.rs  soldb_bridge.rs  style.rs
cargo-stylus/test/: .gitignore  README.md  deploy.sh  lit.cfg.py  run-tests.sh  run-with-venv.sh  simple.test
cargo-stylus/test/replay/: basic-replay.test  debugger-selection.test  error-handling.test  multi-contract.test
cargo-stylus/test/usertrace/: basic-trace.test  external-crate.test  json-output.test  multi-contract-trace.test  verbose-trace.test
cargo-stylus/test/utils/: send_tx.py
cargo-stylus/tests/: commands.rs  solidity_interop.rs
cargo-stylus/tests/contract_abi/: Stylus.toml
examples/callee/: Cargo.toml  README.md  abi.sol
examples/callee/.cargo/: config.toml
examples/callee/src/: lib.rs  main.rs
examples/caller/: Cargo.toml  README.md  abi.sol
examples/caller/src/: lib.rs
examples/caller/tests/: caller_callee_integration_test.rs
examples/erc20/: Cargo.toml  abi.sol
examples/erc20/.cargo/: config
examples/erc20/scripts/: .env.example  README.md  package.json
examples/erc20/src/: erc20.rs  ierc20.rs  lib.rs  main.rs
examples/erc20/tests/: erc20_integration_test.rs
examples/erc721/: Cargo.toml  abi.sol
examples/erc721/scripts/: .env.example  README.md  package.json
examples/erc721/src/: erc721.rs  ierc721.rs  lib.rs  main.rs
examples/erc721/tests/: erc721_integration_test.rs
examples/errors/: Cargo.toml  abi.sol
examples/errors/src/: lib.rs  main.rs
examples/errors/tests/: errors_integration_test.rs
examples/hello_world/: Cargo.toml  abi.sol
examples/hello_world/src/: lib.rs  main.rs
examples/hello_world/tests/: hello_world_integration_test.rs
examples/json/contract/: Cargo.toml
examples/ownable/: Cargo.toml
examples/ownable/src/: main.rs  ownable.rs
examples/pausable/: Cargo.toml
examples/pausable/.cargo/: config
examples/pausable/src/: lib.rs  ownable.rs  pausable.rs
examples/single_call/: .gitignore  Cargo.toml  README.md  abi.sol  rust-toolchain.toml
examples/single_call/scripts/: .env.example  .gitignore  README.md  hardhat.config.js  package.json
examples/single_call/src/: lib.rs  main.rs
examples/single_call/tests/: devnet.rs  single_call_integration_test.rs
mini-alloc/: Cargo.toml  README.md
mini-alloc/.cargo/: config.toml
mini-alloc/src/: imp.rs  impl_unix_windows.rs  impl_wasm.rs  lib.rs  wasm.rs
mini-alloc/tests/: misc.rs  wasm.rs
samples/json/: Cargo.toml
samples/json/src/: main.rs
stylus-core/: Cargo.toml
stylus-core/src/: calls.rs  context.rs  deploy.rs  host.rs  lib.rs  sol.rs  storage.rs
stylus-core/src/calls/: context.rs  errors.rs  mod.rs
stylus-e2e-test/: Cargo.toml
stylus-e2e-test/src/: lib.rs
stylus-host/: Cargo.toml
stylus-host/src/: calls.rs  lib.rs
stylus-proc/: Cargo.toml  README.md
stylus-proc/src/: abi.rs  consts.rs  handler.rs  imports.rs  lib.rs  router.rs  storage.rs  ty.rs  types.rs
stylus-proc/src/calls/: mod.rs
stylus-proc/src/impls/: abi_proxy.rs  mod.rs
stylus-proc/src/macros/: contract_client_gen.rs  entrypoint.rs  mod.rs  proof_of_concept.rs  sol_interface.rs  storage.rs
stylus-proc/src/methods/: entrypoint.rs  error.rs  external.rs  mod.rs  public.rs
stylus-proc/src/storage/: mod.rs  proc.rs
stylus-proc/src/utils/: attrs.rs  mod.rs  testing.rs
stylus-proc/tests/: contract_abi.rs  derive_abi_type.rs  derive_erase.rs  derive_solidity_error.rs  mutating_call_context_safety.rs  parameterized_trait_with_associated_types.rs  public.rs  public_composition.rs  sol_interface.rs
stylus-proc/tests/contract_abi/: Cargo.toml
stylus-sdk/: Cargo.toml
stylus-sdk/src/: block.rs  contract.rs  crypto.rs  debug.rs  evm.rs  handler.rs  hostio.rs  lib.rs  methods.rs  msg.rs  prelude.rs  storage.rs  tx.rs  types.rs  util.rs
stylus-sdk/src/abi/: bytes.rs  const_string.rs  export.rs  fixed_bytes.rs  impls.rs  internal.rs  ints.rs  mod.rs
stylus-sdk/src/call/: context.rs  error.rs  mod.rs  raw.rs  traits.rs  transfer.rs
stylus-sdk/src/deploy/: mod.rs  raw.rs
stylus-sdk/src/host/: calls.rs  deploy.rs  mod.rs  wasm.rs
stylus-sdk/src/router/: handler.rs  mod.rs
stylus-sdk/src/storage/: array.rs  bytes.rs  cache.rs  eager.rs  map.rs  mod.rs  traits.rs  vec.rs
stylus-sdk/src/testing/: mod.rs
stylus-sdk/tests/: sol_interface_mock_native.rs
stylus-test/: Cargo.toml  README.md
stylus-test/src/: builder.rs  constants.rs  lib.rs  mock.rs  state.rs  vm.rs
stylus-tools/: Cargo.toml
stylus-tools/precompiles/: ArbAddressTable.sol  ArbAggregator.sol  ArbDebug.sol  ArbGasInfo.sol  ArbInfo.sol  ArbOwner.sol  ArbOwnerPublic.sol  ArbRetryableTx.sol  ArbSys.sol  ArbWasm.sol  ArbWasmCache.sol  fix-precompile.sh
stylus-tools/src/: activate.rs  activator.rs  build.rs  cargo_stylus.rs  checker.rs  contract.rs  deployer.rs  devnet.rs  error.rs  exporter.rs  lib.rs  macros.rs  manifest.rs  precompiles.rs  project.rs  verification.rs  verifier.rs  verify.rs  wasm.rs  workspace.rs
stylus-tools/src/cargo/: build.rs  cmd.rs  metadata.rs  mod.rs
stylus-tools/src/core/: activate.rs  activation.rs  build.rs  cache.rs  chain.rs  check.rs  codegen.rs  contract.rs  debugger.rs  message.rs  mod.rs  network.rs  reflection.rs  verification.rs  wasm.rs
stylus-tools/src/devnet/: bytecode.rs  mod.rs
stylus-tools/src/ops/: activate.rs  build.rs  cache.rs  check.rs  codegen.rs  codehash_keepalive.rs  deploy.rs  export_abi.rs  init.rs  initcode.rs  mod.rs  new.rs  verify.rs
stylus-tools/src/project/: contract.rs  mod.rs  workspace.rs
(+300 files in other folders)
