[workspace]
members = ["stylus-sdk", "stylus-proc", "stylus-test", "mini-alloc", "stylus-core", "stylus-tools"]
resolver = "2"

[workspace.package]
version = "0.9.1"
edition = "2021"
authors = ["Offchain Labs"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/OffchainLabs/stylus-sdk-rs"
repository = "https://github.com/OffchainLabs/stylus-sdk-rs"
rust-version = "1.71.0"

[workspace.dependencies]
alloy-primitives = { version = "=0.8.20", default-features = false }
alloy-sol-types = { version = "=0.8.20", default-features = false }
cfg-if = "1.0.0"
clap = { version = "4.5.4", features = [ "derive", "color" ] }
derivative = { version = "2.2.0", features = ["use_core"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
keccak-const = "0.2.0"
lazy_static = "1.5.0"
sha3 = "0.10.8"
rclite = "0.2.4"
base64ct = "=1.7.0"

# proc macros
convert_case = "0.6.0"
paste = "1.0.15"
proc-macro-error = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.10.6"
syn = { version = "2.0.77", features = ["full", "visit-mut"] }
syn-solidity = "0.8.3"

# proc macro dev
pretty_assertions = "1.4.1"
prettyplease = "0.2.22"

trybuild = "1.0"

# members
mini-alloc = { path = "mini-alloc", version = "0.9.1" }
stylus-sdk = { path = "stylus-sdk" }
stylus-core = { path = "stylus-core", version = "0.9.1" }
stylus-test = { path = "stylus-test", version = "0.9.1" }
stylus-proc = { path = "stylus-proc", version = "0.9.1" }
stylus-tools = { path = "stylus-tools", version = "0.9.1" }
