[package]
name = "cargo-stylus-beta"
keywords = ["arbitrum", "ethereum", "stylus", "alloy", "cargo"]
description = "CLI tool for building Stylus contracts on Arbitrum chains"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
alloy.workspace = true
cargo-util-schemas.workspace = true
eyre.workspace = true
hex.workspace = true
log.workspace = true
stylus-tools.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }

anstyle = "1.0.10"
clap = { version = "4.5.39", features = ["derive"] }
function_name = "0.3"
itertools = "0.14"
lazy_static = "1.5"
libloading = "0.8"
parking_lot = "0.12"
rustc-host = "0.1"
simple_logger = "5.0"

[dev-dependencies]
assert_cmd = "2.0"
