[package]
name = "mini-alloc"
keywords = ["stylus", "allocator"]
description = "Very simple global allocator"
readme = "README.md"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3.0"

[dependencies]
cfg-if = "1.0.0"

[target.'cfg(all(unix, not(target_arch = "wasm32")))'.dependencies.libc]
default-features = false
version = "0.2"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3"
features = ["memoryapi", "minwindef", "winnt", "ntdef"]
