[package]
name = "stylus-tools"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "Tools to compile, deploy and verify Arbitrum Stylus contracts"
readme = "../README.md"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
alloy = { workspace = true, features = ["contract", "getrandom", "rpc-types", "signer-local", "sol-types"] }
eyre.workspace = true
reqwest.workspace = true
testcontainers.workspace = true
trybuild.workspace = true
tokio.workspace = true
regex.workspace = true

anyhow = "1"
brotli2 = "0.3.2"
bytesize = "1.2.0"
cargo-util-schemas = "0.8"
hex.workspace = true
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sys-info = "0.9.1"
thiserror = "2.0"
toml = { version = "0.8" }
wasm-encoder = "0.213.0"
wasm-gen = "0.1.4"
wasmer = "3.1.0"
wasmparser = "0.213.0"
wasmprinter = "0.221.2"
wat = "1.230"

[features]
# The testcontainers feature is necessary to enable integration testing
testcontainers = []
