[package]
name = "callee"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
alloy-primitives = { version = "1.0.1", default-features = false }
alloy-sol-types = { version = "1.0.1", default-features = false }
bobcat-panic = { version = "0.7.35", features = ["panic"] }
stylus-sdk = { path = "../../stylus-sdk" }
ruint = { version = "1.15.0", default-features = false }
const-hex = { version = "1.17.0", default-features = false }

[dev-dependencies]
alloy = { version = "1.0", features = ["contract", "signer-local", "rpc-types", "sha3-keccak"] }
eyre = "0.6"
tokio = "1.44"
stylus-sdk = { path = "../../stylus-sdk", features = ["stylus-test"] }
stylus-tools = { path = "../../stylus-tools" }

[features]
debug = ["stylus-sdk/debug"]
export-abi = ["stylus-sdk/export-abi"]
integration-tests = ["stylus-tools/integration-tests"]
contract-client-gen = []

[lib]
crate-type = ["lib", "cdylib"]
