[package]
name = "caller"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
alloy-primitives = "1.0.1"
alloy-sol-types = "1.0.1"
stylus-sdk = { path = "../../stylus-sdk" }
callee = { path = "../callee", version = "0.1.0", features = ["contract-client-gen"] }

[dev-dependencies]
alloy = { version = "1.0", features = ["contract", "signer-local", "rpc-types", "sha3-keccak"] }
eyre = "0.6"
tokio = "1.44"
stylus-sdk = { path = "../../stylus-sdk", features = ["stylus-test"] }
stylus-tools = { path = "../../stylus-tools" }
callee = { path = "../callee", version = "0.1.0", features = ["contract-client-gen"] }

[features]
export-abi = ["stylus-sdk/export-abi", "callee/export-abi"]
integration-tests = ["stylus-tools/integration-tests"]
contract-client-gen = []
debug = ["stylus-sdk/debug"]

[lib]
crate-type = ["lib", "cdylib"]
