[package]
name = "erc20"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = "0.3.1"
alloy-sol-types = "0.3.1"
stylus-sdk = { path = "../../../stylus-sdk-rs/stylus-sdk" }
mini-alloc = { path = "../../mini-alloc" }

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[[bin]]
name = "erc20"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[workspace]