[package]
name = "stylus-hello-world"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
stylus-sdk.workspace = true

[dev-dependencies]
alloy = { workspace = true, features = ["contract", "signer-local", "rpc-types", "sha3-keccak"] }
eyre = "0.6"
tokio = "1.44"
stylus-sdk = { workspace = true, features = ["stylus-test"] }
stylus-tools.workspace = true

[features]
export-abi = ["stylus-sdk/export-abi"]
integration-tests = ["stylus-tools/integration-tests"]
contract-client-gen = []

[lib]
crate-type = ["lib", "cdylib"]
