[package]
name = "stylus-single-call"
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "Stylus single call router contract"

[dependencies]
alloy-primitives = "1.0.1"
stylus-sdk = { path = "../../stylus-sdk" }

[dev-dependencies]
alloy = { version = "1.0.1", features = ["contract", "signer-local", "rpc-types", "sha3-keccak"] }
eyre = "0.6"
tokio = "1.44"
stylus-sdk = { path = "../../stylus-sdk", features = ["stylus-test"] }
stylus-tools = { path = "../../stylus-tools" }

[features]
export-abi = ["stylus-sdk/export-abi"]
integration-tests = ["stylus-tools/integration-tests"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"

[workspace]
